--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -173,6 +173,7 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
+  letter-spacing: 0.03em;
 }
 .button-portfolio .button.secondary:hover,
 .button-portfolio .button.secondary:focus {
@@ -191,6 +192,9 @@ body {
   line-height: 1.87;
 }
 .example .link:hover,
-.example .link:hover {
+.example .link:focus {
   color: var(--accent-color);
+}
+.example .link {
+  text-decoration: none;
 }
